validação data de nascimento

--- a/cadastro.html
+++ b/cadastro.html
@@ -93,7 +93,7 @@
                 name="nascimento"
                 id="nascimento"
                 class="input"
-                type="text"
+                type="date"
                 placeholder="Data de nascimento"
                 required
               />
