--- a/cadastro.html
+++ b/cadastro.html
@@ -41,7 +41,7 @@
         >
           <fieldset>
             <legend class="formulario__legenda">Informações básicas</legend>
-            <div class="input-container">
+            <div class="input-container input-container--invalido">
               <input
                 name="nome"
                 id="nome"
