validando CPF com números repetidos

--- a/cadastro.html
+++ b/cadastro.html
@@ -116,6 +116,7 @@
                 class="input"
                 type="text"
                 placeholder="CPF"
+                data-tipo="cpf"
                 required
               />
               <label class="input-label" for="cpf">CPF</label>
@@ -133,7 +134,6 @@
                 class="input"
                 type="text"
                 placeholder="CEP"
-                required
               />
               <label class="input-label" for="cep">CEP</label>
               <span class="input-mensagem-erro"
@@ -147,7 +147,6 @@
                 class="input"
                 type="text"
                 placeholder="Logradouro"
-                required
               />
               <label class="input-label" for="logradouro">Logradouro</label>
               <span class="input-mensagem-erro"
@@ -161,7 +160,6 @@
                 class="input"
                 type="text"
                 placeholder="Cidade"
-                required
               />
               <label class="input-label" for="cidade">Cidade</label>
               <span class="input-mensagem-erro"
@@ -175,7 +173,6 @@
                 class="input"
                 type="text"
                 placeholder="Estado"
-                required
               />
               <label class="input-label" for="estado">Estado</label>
               <span class="input-mensagem-erro"
