--- a/cadastro.html
+++ b/cadastro.html
@@ -134,6 +134,9 @@
                 class="input"
                 type="text"
                 placeholder="CEP"
+                data-tipo="cep"
+                pattern="[\d]{5}-?[\d]{3}"
+                required
               />
               <label class="input-label" for="cep">CEP</label>
               <span class="input-mensagem-erro"
