Buscando endereço via API

--- a/cadastro.html
+++ b/cadastro.html
@@ -149,7 +149,9 @@
                 id="logradouro"
                 class="input"
                 type="text"
+                data-tipo="logradouro"
                 placeholder="Logradouro"
+                required
               />
               <label class="input-label" for="logradouro">Logradouro</label>
               <span class="input-mensagem-erro"
@@ -163,6 +165,8 @@
                 class="input"
                 type="text"
                 placeholder="Cidade"
+                data-tipo="cidade"
+                required
               />
               <label class="input-label" for="cidade">Cidade</label>
               <span class="input-mensagem-erro"
@@ -176,6 +180,8 @@
                 class="input"
                 type="text"
                 placeholder="Estado"
+                data-tipo="estado"
+                required
               />
               <label class="input-label" for="estado">Estado</label>
               <span class="input-mensagem-erro"
