Modificações em pastas

--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -37,7 +37,7 @@
           <li class="cabecalho__link"><a href="#">Dashboard</a></li>
           <li class="cabecalho__link"><a href="#">Produtos</a></li>
           <li class="cabecalho__link">
-            <a href="lista_cliente.html">Clientes </a>
+            <a href="clientes/telas/lista_cliente.html">Clientes </a>
           </li>
           <li class="cabecalho__link"><a href="#">Pets</a></li>
         </ul>
