--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doguito Petshop | Cadastro de produto</title>
     <link
+      rel="shortcut icon"
+      href="assets/img/doguitoadm.svg"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
     />
@@ -19,11 +24,6 @@
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css" />
     <link rel="stylesheet" href="./assets/css/componentes/botao.css" />
     <link rel="stylesheet" href="./assets/css/cadastro_produto.css" />
-    <link
-      rel="shortcut icon"
-      href="assets/img/doguito.svg"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <header class="cabecalho container">
