--- a/cadastro_produto_concluido.html
+++ b/cadastro_produto_concluido.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doguito Petshop | Cadastro concluído</title>
     <link
+      rel="shortcut icon"
+      href="assets/img/doguito.svg"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
     />
@@ -18,11 +23,6 @@
     <link rel="stylesheet" href="./assets/css/componentes/cartao.css" />
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css" />
     <link rel="stylesheet" href="./assets/css/componentes/botao.css" />
-    <link
-      rel="shortcut icon"
-      href="assets/img/doguito.svg"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <header class="cabecalho container">
@@ -35,7 +35,9 @@
         <ul class="cabecalho__lista-navegacao">
           <li class="cabecalho__link"><a href="#">Dashboard</a></li>
           <li class="cabecalho__link"><a href="#">Produtos</a></li>
-          <li class="cabecalho__link"><a href="telas/lista_cliente.html">Clientes</a></li>
+          <li class="cabecalho__link">
+            <a href="clientes/telas/lista_cliente.html">Clientes</a>
+          </li>
           <li class="cabecalho__link"><a href="#">Pets</a></li>
         </ul>
       </nav>
