--- a/clientes/telas/edicao_concluida.html
+++ b/clientes/telas/edicao_concluida.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="shortcut icon"
+      href="assets/img/doguitoadm.svg"
+      type="image/x-icon"
+    />
     <title>Doguito Petshop | Cadastro concluído</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
@@ -20,7 +25,7 @@
             <ul class="cabecalho__lista-navegacao">
                 <li class="cabecalho__link"><a href="#">Dashboard</a></li>
                 <li class="cabecalho__link"><a href="#">Produtos</a></li>
-                <li class="cabecalho__link"><a href="./lista_cliente.html">Clientes</a></li>
+                <li class="cabecalho__link"><a href="../telas/lista_cliente.html">Clientes</a></li>
                 <li class="cabecalho__link"><a href="#">Pets</a></li>
             </ul>
         </nav>
@@ -29,7 +34,7 @@
         <section class="cadastro-cartao cartao">
             <span class="cadastro-cartao__icone-concluido"></span>
             <h1 class="cadastro-cartao__titulo cartao__titulo">Cliente editado com sucesso</h1>
-            <a href="./lista_cliente.html" class="botao">Voltar para clientes</a>
+            <a href="../telas/lista_cliente.html" class="botao">Voltar para clientes</a>
         </section>
     </main>
 </body>
