--- a/clientes/telas/lista_cliente.html
+++ b/clientes/telas/lista_cliente.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doguito Petshop | Clientes</title>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../assets/img/doguitoadm.svg"
+      type="image/x-icon"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
