--- a/clientes/telas/lista_cliente.html
+++ b/clientes/telas/lista_cliente.html
@@ -57,14 +57,7 @@
           </tr>
         </thead>
         <tbody data-tabela>
-           <td class="td" data-td>${nome}</td>
-                <td>${email}</td>
-                <td>
-                    <ul class="tabela__botoes-controle">
-                        <li><a href="../telas/edita_cliente.html" class="botao-simples botao-simples--editar">Editar</a></li>
-                        <li><button class="botao-simples botao-simples--excluir" type="button">Excluir</button></li>
-                    </ul>
-                </td> 
+         
         </tbody>
       </table>
       <div class="modal-container modal--fechado">
@@ -81,6 +74,6 @@
         </article>
       </div>
     </main>
-    <script src="../../clientes/service/cliente-service.js"></script>
+    <script src="../service/cliente-service.js"></script>
   </body>
 </html>
