Criando um cliente

--- a/clientes/telas/cadastra_cliente.html
+++ b/clientes/telas/cadastra_cliente.html
@@ -81,4 +81,5 @@
       </section>
     </main>
   </body>
+  <script type="module" src="../controller/cadastraClientes-controller.js"></script>
 </html>
