--- a/clientes/telas/edita_cliente.html
+++ b/clientes/telas/edita_cliente.html
@@ -80,5 +80,6 @@
         </form>
       </section>
     </main>
+    <script type="module" src="../controller/atualizaCliente-contrller.js"></script>
   </body>
 </html>
