--- a/clientes/telas/edicao_concluida.html
+++ b/clientes/telas/edicao_concluida.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doguito Petshop | Cadastro concluído</title>
     <link
       rel="shortcut icon"
-      href="assets/img/doguitoadm.svg"
+      href="../assets/img/doguitoadm.svg"
       type="image/x-icon"
     />
-    <title>Doguito Petshop | Cadastro concluído</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../assets/css/base/base.css">
